Implementation of locales in REST API.